load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@aspect_bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:oxfmt/package_json.bzl", oxfmt = "bin")
load("@rules_multirun//:defs.bzl", "multirun")
load("//tools:generated_packages.bzl", "link_all_generated_packages")
load("//tools:tsconfig.bzl", "BASE_TSCONFIG")

# gazelle:generation_mode update_only
# gazelle:js disabled
# gazelle:js_pnpm_lockfile pnpm-lock.yaml
# gazelle:js_validate_import_statements off

# Exported for Node subpath import resolution (#packages/*) in tests.
# Node walks up to find package.json with "imports" field.
exports_files(
    ["package.json"],
    visibility = ["//visibility:public"],
)

# Root package.json for Node subpath import resolution (#packages/*).
copy_to_bin(
    name = "root_package_json",
    srcs = ["package.json"],
    visibility = ["//visibility:public"],
)

exports_files(
    ["package.json"],
    visibility = ["//visibility:public"],
)

gazelle_binary(
    name = "gazelle_bin",
    languages = [
        "//tools/gazelle/ts",
    ],
)

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_bin",
)

npm_link_all_packages()

link_all_generated_packages()

exports_files(
    [
        "Cargo.toml",
        "Cargo.lock",
    ],
    visibility = ["//:__subpackages__"],
)

genrule(
    name = "pnpm_workspace_config",
    srcs = [],
    outs = ["pnpm-workspace.yaml"],
    cmd = "echo 'packages:\n\
  - 'packages/*' \
' > $@",
)

PACKAGES_TO_DIST = [
    "//packages/babel-plugin-formatjs",
    "//packages/bigdecimal",
    "//packages/cli-lib",
    "//packages/cli",
    "//packages/ecma376",
    "//packages/eslint-plugin-formatjs",
    "//packages/fast-memoize",
    "//packages/icu-messageformat-parser",
    "//packages/icu-skeleton-parser",
    "//packages/intl-datetimeformat",
    "//packages/intl-displaynames",
    "//packages/intl-durationformat",
    "//packages/intl-supportedvaluesof",
    "//packages/intl-getcanonicallocales",
    "//packages/intl-listformat",
    "//packages/intl-locale",
    "//packages/intl-localematcher",
    "//packages/intl-messageformat",
    "//packages/intl-numberformat",
    "//packages/intl-pluralrules",
    "//packages/intl-relativetimeformat",
    "//packages/intl-segmenter",
    "//packages/intl",
    "//packages/react-intl",
    "//packages/svelte-intl",
    "//packages/ts-transformer",
    "//packages/unplugin",
    "//packages/utils",
    "//packages/vue-intl",
]

PACKAGE_DIRNAMES = [p.split("packages/")[1] for p in PACKAGES_TO_DIST]

# pnpm_bin.pnpm(
#    name="deploy",
#    srcs=[":dist"],
#    out_dirs=["deploy_result"],
#    chdir="$(rootpath :dist)",
#    args=["deploy", "--filter", "@formatjs/cli-lib", "../$(@D)"]
# )

copy_to_directory(
    name = "dist",
    srcs = [
        # to verify, run verdaccio at port 4000 and enable this
        ":pnpm_workspace_config",
        "package.json",
        "pnpm-lock.yaml",
    ] + ["%s:pkg" % pkg for pkg in PACKAGES_TO_DIST] + glob(["patches/*"]),
    out = "formatjs_dist",
    replace_prefixes = {k: v for k, v in [(
        "packages/%s/pkg" % p,
        "packages/%s" % p,
    ) for p in PACKAGE_DIRNAMES]},
)

multirun(
    name = "generated-test-files",
    testonly = True,
    commands = [
        "//packages/intl-datetimeformat:test262-main",
        "//packages/intl-datetimeformat:generated-test-files",
        "//packages/intl-displaynames:test262-main",
        "//packages/intl-displaynames:generated-test-files",
        "//packages/intl-listformat:test262-main",
        "//packages/intl-listformat:generated-test-files",
        "//packages/intl-numberformat:test262-main",
        "//packages/intl-numberformat:generated-test-files",
        "//packages/intl-pluralrules:test262-main",
        "//packages/intl-pluralrules:generated-test-files",
        "//packages/intl-relativetimeformat:test262-main",
        "//packages/intl-relativetimeformat:generated-test-files",
        "//packages/intl-segmenter:test262-main",
        "//packages/intl-segmenter:generated-files",
        "//packages/intl-getcanonicallocales:aliases",
    ],
)

multirun(
    name = "generated-files",
    testonly = True,
    commands = [
        "//packages/intl-datetimeformat:supported-locales",
        "//packages/intl-displaynames:supported-locales",
        "//packages/intl-listformat:supported-locales",
        "//packages/intl-numberformat:supported-locales",
        "//packages/intl-pluralrules:supported-locales",
        "//packages/intl-relativetimeformat:supported-locales",
        "//packages/intl-segmenter:generated-files",
    ],
)

multirun(
    name = "cldr-gen",
    testonly = True,
    commands = [
        "//packages/icu-messageformat-parser:time-data",
        "//packages/intl-datetimeformat:supported-locales",
        "//packages/intl-datetimeformat:test262-main",
        "//packages/intl-displaynames:supported-locales",
        "//packages/intl-displaynames:test262-main",
        "//packages/intl-durationformat:numbering-systems",
        "//packages/intl-durationformat:time-separators",
        "//packages/intl-supportedvaluesof:calendars",
        "//packages/intl-supportedvaluesof:collations",
        "//packages/intl-supportedvaluesof:currencies",
        "//packages/intl-supportedvaluesof:numbering-systems",
        "//packages/intl-supportedvaluesof:timezones",
        "//packages/intl-supportedvaluesof:units",
        "//packages/intl-getcanonicallocales:aliases",
        "//packages/intl-getcanonicallocales:likelySubtags",
        "//packages/intl-listformat:supported-locales",
        "//packages/intl-listformat:test262-main",
        "//packages/intl-locale:calendars",
        "//packages/intl-locale:character-orders",
        "//packages/intl-locale:hour-cycles",
        "//packages/intl-locale:numbering-systems",
        "//packages/intl-locale:timezones",
        "//packages/intl-locale:week-data",
        "//packages/intl-numberformat:currency-digits",
        "//packages/intl-numberformat:numbering-systems",
        "//packages/intl-numberformat:supported-locales",
        "//packages/intl-numberformat:test262-main",
        "//packages/intl-pluralrules:supported-locales",
        "//packages/intl-pluralrules:test262-main",
        "//packages/intl-relativetimeformat:supported-locales",
        "//packages/intl-relativetimeformat:test262-main",
        "//packages/intl-segmenter:generate-cldr-segmentation-rules",
        "//packages/intl-segmenter:test262-main",
        "//packages/utils:default-currency",
        "//packages/utils:default-locale",
    ],
    jobs = 0,  # Run all targets in parallel
)

copy_to_bin(
    name = "tsconfig",
    srcs = ["tsconfig.json"],
    visibility = ["//visibility:public"],
)

# Generate tsconfig.json from BASE_TSCONFIG in tools/tsconfig.bzl
genrule(
    name = "tsconfig_generated",
    outs = ["tsconfig.generated.json"],
    cmd = "echo '%s' > $@" % json.encode_indent(
        BASE_TSCONFIG,
        indent = "  ",
    ),
)

# Format the generated tsconfig.json with oxfmt
# Use genrule with proper BAZEL_BINDIR set, and include oxfmt's config in srcs
genrule(
    name = "tsconfig_formatted",
    srcs = [
        ":tsconfig_generated",
        ":oxfmtrc",
    ],
    outs = ["tsconfig.formatted.json"],
    cmd = "cat $(location :tsconfig_generated) | $(location //:oxfmt) --stdin-filepath=$(location :tsconfig_generated) > $@",
    tools = ["//:oxfmt"],
)

# Ensure tsconfig.json stays in sync with BASE_TSCONFIG
write_source_files(
    name = "tsconfig_sync",
    files = {
        "tsconfig.json": ":tsconfig_formatted",
    },
)

copy_to_bin(
    name = "oxfmtrc",
    srcs = [".oxfmtrc.json"],
    visibility = ["//visibility:public"],
)

oxfmt.oxfmt_binary(
    name = "oxfmt",
    data = [
        ":oxfmtrc",
    ],
    env = {"BAZEL_BINDIR": "."},
    fixed_args = [
        "--config=\"$$JS_BINARY__RUNFILES\"/$(rlocationpath //:oxfmtrc)",
    ],
    visibility = ["//visibility:public"],
)
