module(
    name = "formatjs",
    version = "1.0",
)

######### Bazel core rules #########

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_shell", version = "0.6.1")

######### JS & Node.js rules #########

bazel_dep(name = "aspect_rules_js", version = "2.8.3")

####### Node.js version #########
# By default you get the node version from DEFAULT_NODE_VERSION in @rules_nodejs//nodejs:repositories.bzl
# Optionally you can pin a different node version:
bazel_dep(name = "rules_nodejs", version = "6.6.2")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "22.12.0")

#################################

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    data = [
        "//:patches/@brillout__vite-plugin-server-entry@0.7.16.patch",
        "//:patches/@types__mdx.patch",
        "//:patches/@vue+compiler-sfc.patch",
        "//:patches/make-plural-compiler@5.1.0.patch",
    ],
    npmrc = "//:.npmrc",
    patch_args = {"*": ["-p1"]},
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")

# Choose a different version of pnpm - note that only the "root" module may do this,
# not some transitive dependency.
pnpm.pnpm(
    name = "pnpm",
    pnpm_version = "10.4.1",
)

# Allows developers to use the matching pnpm version, for example:
# bazel run -- @pnpm --dir /home/runner/work/rules_js/rules_js install
use_repo(pnpm, "pnpm")

######### ESBuild rules #########

bazel_dep(name = "aspect_rules_esbuild", version = "0.25.0")

######### TypeScript rules #########

bazel_dep(name = "aspect_rules_ts", version = "3.8.1")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps(
    ts_integrity = "sha512-aJn6wq13/afZp/jT9QZmwEjDqqvSGp1VT5GVg+f/t6/oVyrgXM6BY1h9BRh/O5p3PlUPAe+WuiEZOmb/49RqoQ==",
    ts_version_from = "//:package.json",
)
use_repo(rules_ts_ext, "npm_typescript")

######### Bazel lib rules #########

bazel_dep(name = "aspect_bazel_lib", version = "2.22.2")

######### Multirun rules #########

bazel_dep(name = "rules_multirun", version = "0.13.0")

######### buildifier rules #########

bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.2.1.1",
    dev_dependency = True,
)

######### Rust rules #########

bazel_dep(name = "rules_rust", version = "0.68.1")

crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates")

bazel_dep(name = "rules_rust_wasm_bindgen", version = "0.68.1")

# Register wasm32 toolchain
register_toolchains(
    "@rules_rust//rust/private/dummy_cc_toolchain:dummy_cc_wasm32_toolchain",
)

######### Lint rules #########

bazel_dep(name = "aspect_rules_lint", version = "1.10.2")

########## BuildBuddy toolchain rules #########

bazel_dep(name = "toolchains_buildbuddy", version = "0.0.4")

use_extension("@toolchains_buildbuddy//:extensions.bzl", "buildbuddy")

register_toolchains(
    "@toolchains_buildbuddy//toolchains/cc:ubuntu_gcc_x86_64",
)

######### test262 rules #########

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

TEST262_COMMIT = "ade328d530525333751e8a3b58f02e18624da085"

http_archive(
    name = "com_github_tc39_test262",
    build_file = "@//:test262.BUILD",
    sha256 = "f4915077f38016d0f20ad8cbeaeec4e3d4a5eca3a98a895e01653f3375802a4b",
    strip_prefix = "tc39-test262-%s" % TEST262_COMMIT[:7],
    type = "tar.gz",
    urls = ["https://github.com/tc39/test262/tarball/%s" % TEST262_COMMIT],
)

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "DerivedCombiningClass",
    sha256 = "52064d588c98c623b2373905e6a449eb520f900113954bcd212e94ef0810b471",
    url = "https://www.unicode.org/Public/16.0.0/ucd/extracted/DerivedCombiningClass.txt",
)

http_file(
    name = "DerivedEastAsianWidth",
    sha256 = "372e34de237e5a644ce8379a0d02b91a1f584f04d4fb240ea6ccc87c5767f926",
    url = "https://www.unicode.org/Public/16.0.0/ucd/extracted/DerivedEastAsianWidth.txt",
)

http_file(
    name = "GraphemeBreakProperty",
    sha256 = "c29360bd6f7132811d701d29069541e827eb44bfc4c8fbde8c370d6982689dc1",
    url = "https://www.unicode.org/Public/16.0.0/ucd/auxiliary/GraphemeBreakProperty.txt",
)

http_file(
    name = "GraphemeBreakTest",
    sha256 = "ee2b9354d270ac061b29f09662cafea06341d77e704b8cc6bd72aaeeda363cb5",
    url = "https://www.unicode.org/Public/16.0.0/ucd/auxiliary/GraphemeBreakTest.txt",
)

http_file(
    name = "IndicSyllabicCategory",
    sha256 = "615f1b92ba7ec76e18c5b5c05d2e1836e4b98bc791eb9e27946c7621fc047ae7",
    url = "https://www.unicode.org/Public/16.0.0/ucd/IndicSyllabicCategory.txt",
)

http_file(
    name = "SentenceBreakProperty",
    sha256 = "20aab5eca3842c7a27cc6756d74488a4a5f744c8dca2948ec1128f26a60d1f79",
    url = "https://www.unicode.org/Public/16.0.0/ucd/auxiliary/SentenceBreakProperty.txt",
)

http_file(
    name = "SentenceBreakTest",
    sha256 = "0aef84034ee1789eb71021454fac384e83080b05922272d63cf297f4bf08150e",
    url = "https://www.unicode.org/Public/16.0.0/ucd/auxiliary/SentenceBreakTest.txt",
)

http_file(
    name = "WordBreakProperty",
    sha256 = "476464e71a4b7b779b8ba7c5671f4338fea77da8e6b6b05fb82b3fdd14603779",
    url = "https://www.unicode.org/Public/16.0.0/ucd/auxiliary/WordBreakProperty.txt",
)

http_file(
    name = "WordBreakTest",
    sha256 = "ad985d5721f3fa6b45495663dfe44180f2f68976100dee0ea7451ef1a8f838e8",
    url = "https://www.unicode.org/Public/16.0.0/ucd/auxiliary/WordBreakTest.txt",
)
