module(
    name = "formatjs",
    version = "1.0",
)

######### Bazel core rules #########

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

######### JS & Node.js rules #########

bazel_dep(name = "aspect_rules_js", version = "2.9.1")

####### Node.js version #########
# By default you get the node version from DEFAULT_NODE_VERSION in @rules_nodejs//nodejs:repositories.bzl
# Optionally you can pin a different node version:
bazel_dep(name = "rules_nodejs", version = "6.7.3")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "22.12.0")

#################################

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    data = [
        "//:patches/@types__mdx.patch",
        "//:patches/@vue+compiler-sfc.patch",
        "//:patches/unicode-match-property-ecmascript@2.0.0.patch",
        "//:patches/unicode-match-property-value-ecmascript@2.2.1.patch",
    ],
    npmrc = "//:.npmrc",
    patch_args = {"*": ["-p1"]},
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")

# Choose a different version of pnpm - note that only the "root" module may do this,
# not some transitive dependency.
pnpm.pnpm(
    name = "pnpm",
    pnpm_version = "10.4.1",
)

# Allows developers to use the matching pnpm version, for example:
# bazel run -- @pnpm --dir /home/runner/work/rules_js/rules_js install
use_repo(pnpm, "pnpm")

######### ESBuild rules #########

bazel_dep(name = "aspect_rules_esbuild", version = "0.25.0")

######### TypeScript rules #########

bazel_dep(name = "aspect_rules_ts", version = "3.8.3")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps(
    ts_integrity = "sha512-aJn6wq13/afZp/jT9QZmwEjDqqvSGp1VT5GVg+f/t6/oVyrgXM6BY1h9BRh/O5p3PlUPAe+WuiEZOmb/49RqoQ==",
    ts_version_from = "//:package.json",
)
use_repo(rules_ts_ext, "npm_typescript")

######### Bazel lib rules #########

bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")

######### Multirun rules #########

bazel_dep(name = "rules_multirun", version = "0.13.0")

######### buildifier rules #########

bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.2.1.1",
    dev_dependency = True,
)

######### Rust rules #########

bazel_dep(name = "rules_rust", version = "0.68.1")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    extra_target_triples = [
        "wasm32-unknown-unknown",
        "x86_64-unknown-linux-gnu",
    ],
    versions = [
        "1.90.0",
    ],
)
use_repo(rust, "rust_toolchains")

crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates")

bazel_dep(name = "rules_rust_wasm_bindgen", version = "0.68.1")

# Register wasm32 toolchain
register_toolchains(
    "@rules_rust//rust/private/dummy_cc_toolchain:dummy_cc_wasm32_toolchain",
)

######### Lint rules #########

bazel_dep(name = "aspect_rules_lint", version = "1.10.2")

######### Java rules #########

bazel_dep(name = "rules_java", version = "9.3.0")

########## BuildBuddy toolchain rules #########

bazel_dep(name = "toolchains_buildbuddy", version = "0.0.4")

use_extension("@toolchains_buildbuddy//:extensions.bzl", "buildbuddy")

register_toolchains(
    "@toolchains_buildbuddy//toolchains/cc:ubuntu_gcc_x86_64",
)

######### test262 rules #########

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

TEST262_COMMIT = "ade328d530525333751e8a3b58f02e18624da085"

http_archive(
    name = "com_github_tc39_test262",
    build_file = "@//:test262.BUILD",
    sha256 = "f4915077f38016d0f20ad8cbeaeec4e3d4a5eca3a98a895e01653f3375802a4b",
    strip_prefix = "tc39-test262-%s" % TEST262_COMMIT[:7],
    type = "tar.gz",
    urls = ["https://github.com/tc39/test262/tarball/%s" % TEST262_COMMIT],
)

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "DerivedCombiningClass",
    sha256 = "191463abfbd202703c6fd6776a92a23ac44ec65e0476a7f95aa91ca492cef29b",
    url = "https://www.unicode.org/Public/17.0.0/ucd/extracted/DerivedCombiningClass.txt",
)

http_file(
    name = "DerivedEastAsianWidth",
    sha256 = "0b5523a2217cb318d20b329a05d31eec5af5686ba09d263b85bb75a28989a3a8",
    url = "https://www.unicode.org/Public/17.0.0/ucd/extracted/DerivedEastAsianWidth.txt",
)

http_file(
    name = "GraphemeBreakProperty",
    sha256 = "d6b51d1d2ae5c33b451b7ed994b48f1f4dc62b2272a5831e7fd418514a6bae89",
    url = "https://www.unicode.org/Public/17.0.0/ucd/auxiliary/GraphemeBreakProperty.txt",
)

http_file(
    name = "GraphemeBreakTest",
    sha256 = "e2d134d2c52919bace503ebb6a551c1855fe1a1faec18478c78fff254a1793ec",
    url = "https://www.unicode.org/Public/17.0.0/ucd/auxiliary/GraphemeBreakTest.txt",
)

http_file(
    name = "IndicSyllabicCategory",
    sha256 = "3fc122f4cf58b0c19268d5f810263b04ab4e1e67743386ec0e0ada9c76aec5be",
    url = "https://www.unicode.org/Public/17.0.0/ucd/IndicSyllabicCategory.txt",
)

http_file(
    name = "SentenceBreakProperty",
    sha256 = "871c0c985ad95125e25b302414065a10839d068970bceb383ecec138f22a0a18",
    url = "https://www.unicode.org/Public/17.0.0/ucd/auxiliary/SentenceBreakProperty.txt",
)

http_file(
    name = "SentenceBreakTest",
    sha256 = "12cb47d028ded0c1cb8a28558f95479cbcd24559c46977015c82f3b50a1cc6e4",
    url = "https://www.unicode.org/Public/17.0.0/ucd/auxiliary/SentenceBreakTest.txt",
)

http_file(
    name = "WordBreakProperty",
    sha256 = "72274cac1e6b919507db35655c3e175aa27274668a1ece95c28d2069f2ad9852",
    url = "https://www.unicode.org/Public/17.0.0/ucd/auxiliary/WordBreakProperty.txt",
)

http_file(
    name = "WordBreakTest",
    sha256 = "1de23a75f37904abc7d206239ee8d34f8fdf0fb4ab32a7174dfbabbde25419b2",
    url = "https://www.unicode.org/Public/17.0.0/ucd/auxiliary/WordBreakTest.txt",
)

http_file(
    name = "emoji-data",
    sha256 = "2cb2bb9455cda83e8481541ecf5b6dfda66a3bb89efa3fa7c5297eccf607b72b",
    url = "https://www.unicode.org/Public/17.0.0/ucd/emoji/emoji-data.txt",
)

http_file(
    name = "DerivedCoreProperties",
    sha256 = "24c7fed1195c482faaefd5c1e7eb821c5ee1fb6de07ecdbaa64b56a99da22c08",
    url = "https://www.unicode.org/Public/17.0.0/ucd/DerivedCoreProperties.txt",
)

######### ICU4J for conformance testing #########

http_file(
    name = "icu4j_jar",
    downloaded_file_path = "icu4j-78.1.jar",
    sha256 = "bbb70d3be23110d7295823eee0c2e896ac3b619b3c0f26168f65eb972df51d2a",
    url = "https://github.com/unicode-org/icu/releases/download/release-78.1/icu4j-78.1.jar",
)
